Arduino     Timer programmiert und hinzugefügt     USB-Daten werden alle 100ms gesendet anstatt 200ms iOS     Ladung kann gestoppt werden

--- a/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
+++ b/Client/iOS/EVSE/Base.lproj/Main_iPhone.storyboard
@@ -381,6 +381,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="agA-Oi-EIE"/>
+        <segue reference="lqf-kz-cuy"/>
     </inferredMetricsTieBreakers>
 </document>
